# GTD

./: README.md  pyproject.toml
gtd/: main.py
